objects/RuleScenario__c.object
<CustomObject>
    <fields>
        <fullName>AssignDirect__c</fullName>
        <label>AssignDirect</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleNumber__c</fullName>
        <label>RuleNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RuleObjectInternal__c</fullName>
        <description>getName() schema for the getLabel() selected in ruleObject picklist</description>
        <label>RuleObjectInternal</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleObject__c</fullName>
        <label>RuleObject</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object With A Long Name</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_To_Commit__c</fullName>
        <label>Time To Commit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X10__c</fullName>
        <label>10</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <label>1</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <label>2</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>RuleScenario</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RuleObject__c</columns>
        <columns>RuleNumber__c</columns>
        <columns>X1__c</columns>
        <columns>X2__c</columns>
        <columns>X3__c</columns>
        <columns>X4__c</columns>
        <columns>X5__c</columns>
        <columns>X6__c</columns>
        <columns>X7__c</columns>
        <columns>X8__c</columns>
        <columns>X9__c</columns>
        <columns>X10__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RuleScenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RuleScenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RuleObjectRequired</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Text(RuleObject__c ) ) ||  LEN(Text(RuleObject__c)  ) = 0</errorConditionFormula>
        <errorDisplayField>RuleObject__c</errorDisplayField>
        <errorMessage>Please pick a rule object from the dropdown.</errorMessage>
    </validationRules>
</CustomObject>